Add eslint configuration for function declarations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,12 @@
       {
         "devDependencies": true
       }
+    ],
+    "no-use-before-define": [
+      "error",
+      {
+        "functions": false
+      }
     ]
   }
 }
